# openx-assets

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.adoc  README.md  REUSE.toml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: buildah-build-devel.yml  release-open-material.yml  release.yml
assets/vehicles/: audi.xosc  bogazici.xosc  fiat.xosc  ford.xosc  generic.xosc  tesla.xosc  toyota.xosc  volkswagen.xosc  volvo.xosc
collections/audi/: m1_audi_a1_2010.xoma  m1_audi_a1_2018_sportback.xoma  m1_audi_a3_1996.xoma  m1_audi_a3_2003_3door.xoma  m1_audi_a3_2003_5door.xoma  m1_audi_a3_2012_2door.xoma  m1_audi_a3_2012_3door.xoma  m1_audi_a3_2012_4door.xoma  m1_audi_a3_2012_5door.xoma  m1_audi_a3_2020_sedan.xoma  m1_audi_a3_2020_sportback.xoma  m1_audi_a3_2024_sportback.xoma  m1_audi_a5_2017_cabriolet.xoma  m1_audi_a5_2017_coupe.xoma  m1_audi_a5_2017_sportback.xoma  m1_audi_a5_2024_sedan.xoma  m1_audi_a6_2018_sedan.xoma  m1_audi_a6_2025_sedan.xoma  m1_audi_a7_2018_sportback.xoma  m1_audi_a8_2017_long.xoma  m1_audi_a8_2017_sedan.xoma  m1_audi_tt_2014_coupe.xoma  m1_audi_tt_2014_roadster.xoma
collections/bmw/: m1_bmw_1_2004_hatchback.xoma  m1_bmw_1_2007_cabriolet.xoma  m1_bmw_1_2007_coupe.xoma  m1_bmw_1_2007_hatchback.xoma  m1_bmw_1_2011_coupe.xoma  m1_bmw_1_2011_hatchback_3d.xoma  (+25 more)
containers/: Makefile
scripts/: blender-export-xom.py
src/: Makefile  blender-export-fbx.py
vehicles/: audi.xosc  bogazici.xosc  ford.xosc  generic.xosc  tesla.xosc  toyota.xosc  volvo.xosc
xodr/: martinsville.xodr
(+132 files in other folders)
