[project]
name = "openx-assets"
version = "0.1.0"
description = "OpenX Assets"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MPL-2.0"}
dependencies = [
    "bpy >=4.0.0",
]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["python"]
namespaces = false
