[project]
name = "openx-assets"
version = "0.2.0"
description = "OpenX Assets"
readme = "python/openx_assets/README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
dependencies = [
    "bpy >=4.2.0",
    "jsonschema[format]",
]
license-files = ["python/openx_assets/LICENSE"]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "python"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["python"]
namespaces = false

[tool.setuptools.package-data]
openx_assets = [
    "schemas/**/*.json"
]
